# CHIF-Engine

./: CMakeLists.txt  LICENSE  README.md  client_mode.py  config.ini  mainEngineRutime.py  requirements.txt  run.bat  setup.bat  start_git.bat
.github/workflows/: python-app.yml
CHIFEngine/: ArchiveVersionHistory.txt  CHIFEngine.h  CHIFEngineConfig.cmake.in  CHIFEngine_SOURCE.vcxitems  CHIFEngine_SOURCE.vcxitems.filters  CHIFEngine_Windows.vcxproj  CHIFEngine_Windows.vcxproj.filters  CMakeLists.txt  CommonInclude.h  chifAllocator.h  chifApplication.cpp  chifApplication.h  chifApplication_BindLua.cpp  chifApplication_BindLua.h  chifArchive.cpp  chifArchive.h  chifArguments.cpp  chifArguments.h  chifAsync_BindLua.cpp  chifAsync_BindLua.h  chifAudio.cpp  chifAudio.h  chifAudio_BindLua.cpp  chifAudio_BindLua.h  chifBVH.h  chifBacklog.cpp  chifBacklog.h  chifBacklog_BindLua.cpp  chifBacklog_BindLua.h  chifCanvas.h  chifColor.h  chifConfig.cpp  chifConfig.h  chifECS.h  chifEmittedParticle.cpp  chifEmittedParticle.h  chifEnums.h  chifEventHandler.cpp  chifEventHandler.h  chifFFTGenerator.cpp  (+145 more)
CHIFEngine/Utility/: CMakeLists.txt  stb_vorbis.c  utility_common.cpp  vk_mem_alloc.h  volk.c
CHIFEngine/shaders/: ShaderInterop.h  ShaderInterop_BVH.h  ShaderInterop_DDGI.h  ShaderInterop_EmittedParticle.h  ShaderInterop_FFTGenerator.h  ShaderInterop_FSR2.h  ShaderInterop_Font.h  ShaderInterop_GPUSortLib.h  ShaderInterop_HairParticle.h  ShaderInterop_Image.h  ShaderInterop_Ocean.h  ShaderInterop_Postprocess.h  ShaderInterop_Raytracing.h  ShaderInterop_Renderer.h  ShaderInterop_SurfelGI.h  ShaderInterop_Terrain.h  ShaderInterop_VXGI.h  ShaderInterop_VoxelGrid.h  ShaderInterop_Weather.h  bitonicSortHF.hlsli  brdf.hlsli  cullingShaderHF.hlsli  depthOfFieldHF.hlsli  emittedparticleHF.hlsli  fogHF.hlsli  globals.hlsli  hairparticleHF.hlsli  imageHF.hlsli  impostorHF.hlsli  lightingHF.hlsli  objectHF.hlsli  oceanSurfaceHF.hlsli  raytracingHF.hlsli  shadingHF.hlsli  shadowHF.hlsli  skyAtmosphere.hlsli  skyHF.hlsli  stochasticSSRHF.hlsli  surfaceHF.hlsli  volumeLightHF.hlsli  (+4 more)
CHIFEngineMain/Common/: Command.py  Constants.py  __init__.py
CHIFEngineMain/OpenGLContext/: FrameBuffer.py  Material.py  OpenGLContext.py  RenderBuffer.py  Shader.py  ShaderBuffer.py  Texture.py  UniformBlock.py  UniformBuffer.py  VertexArrayBuffer.py  __init__.py
CHIFEngineMain/Render/: Actor.py  Animation.py  Camera.py  DebugLine.py  Effect.py  Font.py  Gizmo.py  Image.py  Light.py  LightProbe.py  MaterialInstance.py  Mesh.py  Model.py  PostProcess.py  RenderInfo.py  RenderOptions.py  RenderTarget.py  Renderer.py  Renderer_Basic.py  Skeleton.py  Spline.py  Terrain.py  __init__.py
CHIFEngineMain/Render/Atmosphere/: Atmosphere.py  Constants.py  Model.py  __init__.py
CHIFEngineMain/Render/Ocean/: Constants.py  Ocean.py  __init__.py
CHIFEngineMain/Render/ProceduralTexture/: CloudTexture3D.py  NoiseTexture3D.py  VectorFieldTexture3D.py  __init__.py
CHIFEngineMain/ResourceManager/: ColladaLoader.py  DDSLoader.py  FontLoader.py  GenerateMaterialInstance.py  ObjLoader.py  ResourceManager.py  TextureGenerator.py  __init__.py
CHIFEngineMain/UI/: ViewportManager.py  Widget.py  __init__.py
CHIFEngineMain/UI/QT/: MainWindow.py  MainWindow.ui  Widgets.py
CHIFEngineMain/UI/TKInter/: EditableTreeview.py  MainWindow.py
CHIFEngineMain/Utilities/: Attribute.py  AutoEnum.py  Config.py  ExportTexture.py  ImageProcessing.py  Logger.py  RangeVariable.py  SaveTexture.cpp  Singleton.py  Spline.py  StateMachine.py  Transform.py  TransformObject.py  Utility.py  XML.py  __init__.py
CHIFEngineMain/Utilities/Server/: server.py
CHIFEngineMain/Utilities/Server/ClientSide/: client.py
CHIFEngineMain/src/: CoreManager.py  ProjectManager.py  SceneManager.py  SoundManager.py  __init__.py
CHIFEngineMain/src/GameBackend/: GameBackend.py  GameBackend_pygame.py  GameBackend_pyglet.py  __init__.py
Demos/PhysicsTest/: PyBullet3D.project
Demos/PhysicsTest/Models/Alien/: alien_v_1.model  alien_v_2.model
Demos/PhysicsTest/Models/Soma_marmopose/: Soma_marmopose.model
Demos/PhysicsTest/Scripts/: main.py
Resource/: defualt.project
Resource/Scenes/: default_scene.scene
Resource/Scripts/: main.py
Ressources/Pages/: Todo.md
UI/: UIManager.py
docs/: DocumentationRules.Rule  DocumentationStatus.rule  testdoc1.html
objects/Astronaut/: astronaut.obj.json  model.mtl
objects/Eiffel Tower/: Eiffel Tower-bl.mtl  Eiffel Tower.obj.json
objects/Surface/: Make_me_an_mars_like__0914120129_refine.mtl  mars.obj.json  terrain.obj.json
src/: bareEngine.py  camera.py  data_collector.py  light.py  main.py  mesh.py  model.py  objectmanager.py  overlays.py  scene.py  shader_program.py  texture.py  vao.py  vbo.py
src/CHIFScript/: main.py  main.sx
src/Editor/: editor.py  main.py
src/Engine/: DevEngine.py  MainEngine.py
src/Engine/Actor/: camera.py
src/Engine/Input/: gizmo.py  inputmanager.py  manipulator.py
src/Engine/Logic/: black_hole.py  generation.py  physics.py  terrain_gen.py
src/Engine/Models/: mesh.py  model.py  object_manager.py
src/Engine/Objects/: vao.py  vbo.py
src/Engine/Render/: overlays.py  shader_program.py
src/Engine/Scene/: scene.py  scene_renderer.py
src/Engine/Spex/: CHIFConnector.py  CustomSpex.py
src/Engine/Telemetry/: data_collector.py
src/Engine/Texture/: texture.py
src/Engine/UI/: GraphicsWindow.py  UIManager.py
src/Engine/Utils/: audiomanager.py
src/Logic/: enginesettings.py  generation.py  physics.py
src/Objects/: vao.py  vbo.py
src/Spex/src/: keyword_functions.py  main.py  maths.py
src/UI/: GraphicsWindow.py
src/Utils/: audiomanager.py  objectmanager.py
testing/: Makefile  build.sh  engine  level.h  main.c
testing/textures/: T_00.h  T_01.h  T_02.h  T_03.h  T_04.h  T_05.h  T_06.h  T_07.h  T_08.h  T_09.h  T_10.h  T_11.h  T_12.h  T_13.h  T_14.h  T_15.h  T_16.h  T_17.h  T_18.h  T_19.h  T_NUMBERS.h  T_VIEW2D.h
tools/: OSInfo.py  benchmark.py  scenescreator.py
tools/CHIFDevConsole/: main.py
tools/CHIFScripts/: main.CHIFScene  main.sx
tools/data/: fps_data.csv
(+7 files in other folders)
